--- a/homeC1.html
+++ b/homeC1.html
@@ -69,133 +69,116 @@
          <!-- Rankings  -->
         <div>
             <div class="flex">
-                <h2 class="py-12 mx-auto text-2xl lg:text-4xl md:text-4xl text-center text-[#FF110F] font-semibold">POUND FOR POUND RANKINGS</h2>
-            </div>
-            <div class="border border-[#101010] rounded-xl my-4 lg:my-6 p-6 items-center bg-gray-100">
-                <p class="text-[#101010] font-semibold text-xl md:text-3xl lg:text-4xl text-center"> SUBMIT YOUR TOP 10 POUND FOR POUND LIST BELOW. <br>
-                BY PLACING EACH BOXER IN THE POSITION THEY BELONG.
-                </p>
-                <h2 class="pt-8 mx-auto text-2xl lg:text-4xl md:text-4xl text-center text-[#FF110F] font-semibold">PLEASE NOTE THE FOLLOWING:</h2>
-
-                <div class="px-2 md:px-10 lg:px-24 py-8 rounded-lg space-y-4">
-                    <div class="flex gap-2">
-                        <p class="text-[#FF110F] text-2xl font-semibold">1)</p>
-                        <div>
-                            <p class="font-semibold text-md md:text-xl lg:text-xl uppercase">
-                                This list includes the top 10 boxers that appear on each of the following four pound-for-pound lists:
-                            </p>
-                            <ul class="list-none list-inside uppercase text-sm md:text-lg lg:text-lg font-semibold pt-4">
-                                <li>- Ring Magazine</li>
-                                <li>- ESPN</li>
-                                <li>- BoxRec</li>
-                                <li>- Transnational Boxing Rankings Board</li>
-                              </ul>
-                        </div>
-                    </div>
-
-                    <div class="flex gap-2 py-4">
-                        <p class="text-[#FF110F] text-2xl font-semibold">2)</p>
-                        <p class="font-semibold  text-md md:text-xl lg:text-xl uppercase">
-                            Boxers are listed in alphabetical order, based on their last name. So be sure to scroll all the way up and down the list to see all of the boxers that are available to choose from.
-                        </p>
-                    </div>
-
-                    <div class="flex gap-2">
-                        <p class="text-[#FF110F] text-2xl font-semibold">3)</p>
-                        <p class="font-semibold  text-md md:text-xl lg:text-xl uppercase">
-                            You only need to select the top 10, as all other selections outside of the top 10 will be excluded from your list.
-                        </p>
-                    </div>
-                </div>                  
+                <h2 class="py-12 mx-auto text-2xl lg:text-4xl md:text-4xl text-center text-[#FF110F] font-semibold">CLICK ON ANY DIVISION BELOW 
+                    TO SUBMIT <br> YOUR TOP 10 POUND FOR POUND LIST.
+                    </h2>
             </div>
         </div>
 
         <!-- PlayerBox -->
-        <div class="relative grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
-            <div class="border border-[#101010] rounded-xl my-4 lg:my-6 px-8 py-2 items-center bg-gray-100 col-span-2">
-                <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-2">
-                    <div id="scrollContainer" class="h-[72rem] overflow-y-scroll">
-                        <div class="border border-[#101010] rounded-xl my-4 lg:my-6 p-3 items-center bg-gray-50">
-                            <h2 class="bg-[#101010] text-white text-md md:text-2xl lg:text-2xl font-semibold rounded-md text-center p-2">MIDDLEWEIGHT</h2>
-                           <div class="px-4">
-                                <p class="font-bold text-md md:text-xl lg:text-xl text-[#4F4F4F] py-3 text-center">LIMIT: 160 LBS / 72.5 KG</p>
-                                <img src="./img/Player/OLEKSANDR USYK.png" class="mx-auto w-72 md:w-full lg:w-full" alt="">
-                                <div class="py-3 flex items-center text-2xl font-semibold gap-4">
-                                    <p class="text-sm md:text-2xl lg:text-2xl">ZHANIBEK 'QAZAQ STYLE' ALIMKHANULY
-                                    </p>
-                                    <img src="./img/Player/flag/AUSTRALIA FLAG.png" alt="">
-                                </div>
-                                <div class="flex flex-wrap justify-between gap-2 text-md md:text-2xl lg:text-2xl font-bold text-[#FF110F]">
-                                    <h2>RECORD</h2>
-                                    <h2>15 - 0 (10 KO) </h2>
-                                </div>
-                           </div>
+        <div>
+            <div class="flex justify-center">
+                <div class=" w-96 border border-[#101010] rounded-xl my-4 lg:my-6 p-3 items-center bg-gray-50">
+                    <h2 class="bg-[#101010] text-white text-md md:text-2xl lg:text-2xl font-semibold rounded-md text-center p-2">MIDDLEWEIGHT</h2>
+                   <div class="px-4">
+                        <p class="font-bold text-md md:text-xl lg:text-xl text-[#4F4F4F] py-3 text-center">LIMIT: 160 LBS / 72.5 KG</p>
+                        <img src="./img/Player/OLEKSANDR USYK.png" class="mx-auto w-72 md:w-full lg:w-full" alt="">
+                        <div class="py-3 flex items-center text-2xl font-semibold gap-4">
+                            <p class="text-sm md:text-2xl lg:text-2xl">ZHANIBEK 'QAZAQ STYLE' ALIMKHANULY
+                            </p>
+                            <img src="./img/Player/flag/AUSTRALIA FLAG.png" alt="">
                         </div>
-                        <div class="border border-[#101010] rounded-xl my-4 lg:my-6 p-3 items-center bg-gray-50">
-                            <h2 class="bg-[#101010] text-white text-md md:text-2xl lg:text-2xl font-semibold rounded-md text-center p-2">JUNIOR WELTERWEIGHT
-                            </h2>
-                           <div class="px-4">
-                                <p class="font-bold text-md md:text-xl lg:text-xl text-[#4F4F4F] py-3 text-center">LIMIT: 140 LBS / 63.5 KG</p>
-                                <img src="./img/Player/OLEKSANDR USYK (1).png" class="mx-auto w-72 md:w-full lg:w-full" alt="">
-                                <div class="py-3 flex items-center text-2xl font-semibold gap-4">
-                                    <p class="text-sm md:text-2xl lg:text-2xl">TEOFIMO 'THE TAKEOVER' LOPEZ
-                                    </p>
-                                    <img src="./img/Player/flag/AUSTRALIA FLAG (1).png" alt="">
-                                </div>
-                                <div class="flex flex-wrap justify-between gap-2 text-md md:text-2xl lg:text-2xl font-bold text-[#FF110F]">
-                                    <h2>RECORD</h2>
-                                    <h2>21 - 1 (13 KO) </h2>
-                                </div>
-                           </div>
+                        <div class="flex flex-wrap justify-between gap-2 text-md md:text-2xl lg:text-2xl font-bold text-[#FF110F]">
+                            <h2>RECORD</h2>
+                            <h2>15 - 0 (10 KO) </h2>
                         </div>
-                        <div class="border border-[#101010] rounded-xl my-4 lg:my-6 p-3 items-center bg-gray-50">
-                            <h2 class="bg-[#101010] text-white text-md md:text-2xl lg:text-2xl font-semibold rounded-md text-center p-2">MIDDLEWEIGHT</h2>
-                           <div class="px-4">
-                                <p class="font-bold text-md md:text-xl lg:text-xl text-[#4F4F4F] py-3 text-center">LIMIT: 160 LBS / 72.5 KG</p>
-                                <img src="./img/Player/OLEKSANDR USYK.png" class="mx-auto w-72 md:w-full lg:w-full" alt="">
-                                <div class="py-3 flex items-center text-2xl font-semibold gap-4">
-                                    <p class="text-sm md:text-2xl lg:text-2xl">ZHANIBEK 'QAZAQ STYLE' ALIMKHANULY
-                                    </p>
-                                    <img src="./img/Player/flag/AUSTRALIA FLAG.png" alt="">
-                                </div>
-                                <div class="flex flex-wrap justify-between gap-2 text-md md:text-2xl lg:text-2xl font-bold text-[#FF110F]">
-                                    <h2>RECORD</h2>
-                                    <h2>15 - 0 (10 KO) </h2>
-                                </div>
-                           </div>
+                   </div>
+                </div>
+            </div>
+            <div class="flex justify-center flex-wrap gap-8 my-3 lg:my-3">
+                <div class="w-96 border border-[#101010] rounded-xl  p-3 items-center bg-gray-50">
+                    <h2 class="bg-[#101010] text-white text-md md:text-2xl lg:text-2xl font-semibold rounded-md text-center p-2">MIDDLEWEIGHT</h2>
+                   <div class="px-4">
+                        <p class="font-bold text-md md:text-xl lg:text-xl text-[#4F4F4F] py-3 text-center">LIMIT: 160 LBS / 72.5 KG</p>
+                        <img src="./img/Player/OLEKSANDR USYK.png" class="mx-auto w-72 md:w-full lg:w-full" alt="">
+                        <div class="py-3 flex items-center text-2xl font-semibold gap-4">
+                            <p class="text-sm md:text-2xl lg:text-2xl">ZHANIBEK 'QAZAQ STYLE' ALIMKHANULY
+                            </p>
+                            <img src="./img/Player/flag/AUSTRALIA FLAG.png" alt="">
                         </div>
-                        <div class="border border-[#101010] rounded-xl my-4 lg:my-6 p-3 items-center bg-gray-50">
-                            <h2 class="bg-[#101010] text-white text-md md:text-2xl lg:text-2xl font-semibold rounded-md text-center p-2">MIDDLEWEIGHT</h2>
-                           <div class="px-4">
-                                <p class="font-bold text-md md:text-xl lg:text-xl text-[#4F4F4F] py-3 text-center">LIMIT: 160 LBS / 72.5 KG</p>
-                                <img src="./img/Player/OLEKSANDR USYK.png" class="mx-auto w-72 md:w-full lg:w-full" alt="">
-                                <div class="py-3 flex items-center text-2xl font-semibold gap-4">
-                                    <p class="text-sm md:text-2xl lg:text-2xl">ZHANIBEK 'QAZAQ STYLE' ALIMKHANULY
-                                    </p>
-                                    <img src="./img/Player/flag/AUSTRALIA FLAG.png" alt="">
-                                </div>
-                                <div class="flex flex-wrap justify-between gap-2 text-md md:text-2xl lg:text-2xl font-bold text-[#FF110F]">
-                                    <h2>RECORD</h2>
-                                    <h2>15 - 0 (10 KO) </h2>
-                                </div>
-                           </div>
+                        <div class="flex flex-wrap justify-between gap-2 text-md md:text-2xl lg:text-2xl font-bold text-[#FF110F]">
+                            <h2>RECORD</h2>
+                            <h2>15 - 0 (10 KO) </h2>
                         </div>
+                   </div>
+                </div>
+                <div class=" w-96 border border-[#101010] rounded-xl p-3 items-center bg-gray-50">
+                    <h2 class="bg-[#101010] text-white text-md md:text-2xl lg:text-2xl font-semibold rounded-md text-center p-2">MIDDLEWEIGHT</h2>
+                   <div class="px-4">
+                        <p class="font-bold text-md md:text-xl lg:text-xl text-[#4F4F4F] py-3 text-center">LIMIT: 160 LBS / 72.5 KG</p>
+                        <img src="./img/Player/OLEKSANDR USYK.png" class="mx-auto w-72 md:w-full lg:w-full" alt="">
+                        <div class="py-3 flex items-center text-2xl font-semibold gap-4">
+                            <p class="text-sm md:text-2xl lg:text-2xl">ZHANIBEK 'QAZAQ STYLE' ALIMKHANULY
+                            </p>
+                            <img src="./img/Player/flag/AUSTRALIA FLAG.png" alt="">
+                        </div>
+                        <div class="flex flex-wrap justify-between gap-2 text-md md:text-2xl lg:text-2xl font-bold text-[#FF110F]">
+                            <h2>RECORD</h2>
+                            <h2>15 - 0 (10 KO) </h2>
+                        </div>
+                   </div>
+                </div>
+            </div>
+            <div class="border border-[#101010] rounded-xl my-4 lg:my-6 p-3 items-center bg-gray-50">
+                <h2 class="bg-[#101010] text-white text-md md:text-2xl lg:text-2xl font-semibold rounded-md text-center p-2">JUNIOR WELTERWEIGHT
+                </h2>
+               <div class="px-4">
+                    <p class="font-bold text-md md:text-xl lg:text-xl text-[#4F4F4F] py-3 text-center">LIMIT: 140 LBS / 63.5 KG</p>
+                    <img src="./img/Player/OLEKSANDR USYK (1).png" class="mx-auto w-72 md:w-full lg:w-full" alt="">
+                    <div class="py-3 flex items-center text-2xl font-semibold gap-4">
+                        <p class="text-sm md:text-2xl lg:text-2xl">TEOFIMO 'THE TAKEOVER' LOPEZ
+                        </p>
+                        <img src="./img/Player/flag/AUSTRALIA FLAG (1).png" alt="">
                     </div>
-                </div>
+                    <div class="flex flex-wrap justify-between gap-2 text-md md:text-2xl lg:text-2xl font-bold text-[#FF110F]">
+                        <h2>RECORD</h2>
+                        <h2>21 - 1 (13 KO) </h2>
+                    </div>
+               </div>
             </div>
-               <!-- Scroll buttons -->
-            <div class="absolute top-1/2 right-[-2rem] md:right-[-1rem] lg:right-[1px] flex items-center gap-2">
-                <div class="flex flex-col space-y-2">
-                    <button id="scrollUp" class="p-2 hover:shadow text-4xl">
-                        <i class="fa-solid fa-arrow-up"></i>
-                    </button>
-                    <button id="scrollDown" class="p-2 hover:shadow text-4xl">
-                        <i class="fa-solid fa-arrow-down"></i>
-                    </button>
-                </div>
-                <img src="./img/Black.png" class="w-5" alt="">
+            <div class="border border-[#101010] rounded-xl my-4 lg:my-6 p-3 items-center bg-gray-50">
+                <h2 class="bg-[#101010] text-white text-md md:text-2xl lg:text-2xl font-semibold rounded-md text-center p-2">MIDDLEWEIGHT</h2>
+               <div class="px-4">
+                    <p class="font-bold text-md md:text-xl lg:text-xl text-[#4F4F4F] py-3 text-center">LIMIT: 160 LBS / 72.5 KG</p>
+                    <img src="./img/Player/OLEKSANDR USYK.png" class="mx-auto w-72 md:w-full lg:w-full" alt="">
+                    <div class="py-3 flex items-center text-2xl font-semibold gap-4">
+                        <p class="text-sm md:text-2xl lg:text-2xl">ZHANIBEK 'QAZAQ STYLE' ALIMKHANULY
+                        </p>
+                        <img src="./img/Player/flag/AUSTRALIA FLAG.png" alt="">
+                    </div>
+                    <div class="flex flex-wrap justify-between gap-2 text-md md:text-2xl lg:text-2xl font-bold text-[#FF110F]">
+                        <h2>RECORD</h2>
+                        <h2>15 - 0 (10 KO) </h2>
+                    </div>
+               </div>
             </div>
-         </div>
+            <div class="border border-[#101010] rounded-xl my-4 lg:my-6 p-3 items-center bg-gray-50">
+                <h2 class="bg-[#101010] text-white text-md md:text-2xl lg:text-2xl font-semibold rounded-md text-center p-2">MIDDLEWEIGHT</h2>
+               <div class="px-4">
+                    <p class="font-bold text-md md:text-xl lg:text-xl text-[#4F4F4F] py-3 text-center">LIMIT: 160 LBS / 72.5 KG</p>
+                    <img src="./img/Player/OLEKSANDR USYK.png" class="mx-auto w-72 md:w-full lg:w-full" alt="">
+                    <div class="py-3 flex items-center text-2xl font-semibold gap-4">
+                        <p class="text-sm md:text-2xl lg:text-2xl">ZHANIBEK 'QAZAQ STYLE' ALIMKHANULY
+                        </p>
+                        <img src="./img/Player/flag/AUSTRALIA FLAG.png" alt="">
+                    </div>
+                    <div class="flex flex-wrap justify-between gap-2 text-md md:text-2xl lg:text-2xl font-bold text-[#FF110F]">
+                        <h2>RECORD</h2>
+                        <h2>15 - 0 (10 KO) </h2>
+                    </div>
+               </div>
+            </div>
+        </div>
         
 
         <!-- FooterUp Section  -->
