--- a/homeC1.html
+++ b/homeC1.html
@@ -239,6 +239,129 @@
                 </div>
             </div>
         </div>
+        <div class="relative my-2 lg:my-6">
+            <img src="./img/image.png" class="mx-auto w-full h-44 lg:h-64 object-cover rounded-xl" alt="">
+            <div class="absolute top-4 right-4 flex gap-4">
+                <button class="bg-[#101010] w-8 h-8 lg:w-12 lg:h-12 flex items-center justify-center rounded-md">
+                    <i class="fa-solid fa-info text-white text-md lg:text-2xl"></i>
+                </button>
+                <button class="bg-[#101010] w-8 h-8 lg:w-12 lg:h-12 flex items-center justify-center rounded-md">
+                    <i class="fa-solid fa-xmark text-white text-md lg:text-2xl"></i>
+                </button>
+            </div>                 
+        </div>
+
+        <div>
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8 my-6">
+                <div class=" border border-[#101010] rounded-xl  p-3 items-center bg-gray-50">
+                    <h2 class="bg-[#101010] text-white text-md md:text-2xl lg:text-2xl font-semibold rounded-md text-center p-2">LIGHT HEAVYWEIGHT
+                    </h2>
+                   <div class="px-4">
+                        <p class="font-bold text-md md:text-xl lg:text-xl text-[#4F4F4F] py-3 text-center">LIMIT: 175 LBS / 79 KG
+                        </p>
+                        <img src="./img/Player/OLEKSANDR USYK (2).png" class="mx-auto w-72 md:w-full lg:w-full" alt="">
+                        <div class="py-3 flex items-center text-2xl font-semibold gap-4">
+                            <p class="text-sm md:text-2xl lg:text-2xl">ARTUR BETERBIEV
+                            </p>
+                            <img src="./img/Player/flag/RUSSIA FLAG.png" alt="">
+                        </div>
+                        <div class="flex flex-wrap justify-between gap-2 text-md md:text-2xl lg:text-2xl font-bold text-[#FF110F]">
+                            <h2>RECORD</h2>
+                            <h2>20 - 0 (20 KO) </h2>
+                        </div>
+                   </div>
+                </div>
+                <div class="border border-[#101010] rounded-xl p-3 items-center bg-gray-50">
+                    <h2 class="bg-[#101010] text-white text-md md:text-2xl lg:text-2xl font-semibold rounded-md text-center p-2">SUPER MIDDLEWEIGHT
+                    </h2>
+                   <div class="px-4">
+                        <p class="font-bold text-md md:text-xl lg:text-xl text-[#4F4F4F] py-3 text-center">LIMIT: 168 LBS / 76.2 KG
+                        </p>
+                        <img src="./img/Player/OLEKSANDR USYK (3).png" class="mx-auto w-72 md:w-full lg:w-full" alt="">
+                        <div class="py-3 flex items-center text-2xl font-semibold gap-4">
+                            <p class="text-sm md:text-2xl lg:text-2xl">SAUL 'CANELO' ALVAREZ
+                            </p>
+                            <img src="./img/Player/flag/Mexico.png" alt="">
+                        </div>
+                        <div class="flex flex-wrap justify-between gap-2 text-md md:text-2xl lg:text-2xl font-bold text-[#FF110F]">
+                            <h2>RECORD</h2>
+                            <h2>61 - 2 (39 KO)</h2>
+                        </div>
+                   </div>
+                </div>
+                <div class="border border-[#101010] rounded-xl p-3 items-center bg-gray-50">
+                    <h2 class="bg-[#101010] text-white text-md md:text-2xl lg:text-2xl font-semibold rounded-md text-center p-2">MIDDLEWEIGHT</h2>
+                   <div class="px-4">
+                        <p class="font-bold text-md md:text-xl lg:text-xl text-[#4F4F4F] py-3 text-center">LIMIT: 160 LBS / 72.5 KG</p>
+                        <img src="./img/Player/OLEKSANDR USYK.png" class="mx-auto w-72 md:w-full lg:w-full" alt="">
+                        <div class="py-3 flex items-center text-2xl font-semibold gap-4">
+                            <p class="text-sm md:text-2xl lg:text-2xl">ZHANIBEK 'QAZAQ STYLE' ALIMKHANULY
+                            </p>
+                            <img src="./img/Player/flag/Kazakhstan.png" alt="">
+                        </div>
+                        <div class="flex flex-wrap justify-between gap-2 text-md md:text-2xl lg:text-2xl font-bold text-[#FF110F]">
+                            <h2>RECORD</h2>
+                            <h2>15 - 0 (10 KO) </h2>
+                        </div>
+                   </div>
+                </div>
+            </div>
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8 my-6">
+                <div class="border border-[#101010] rounded-xl p-3 items-center bg-gray-50">
+                    <h2 class="bg-[#101010] text-white text-md md:text-2xl lg:text-2xl font-semibold rounded-md text-center p-2">JUNIOR MIDDLEWEIGHT
+                    </h2>
+                   <div class="px-4">
+                        <p class="font-bold text-md md:text-xl lg:text-xl text-[#4F4F4F] py-3 text-center">LIMIT: 154 LBS / 70 KG
+                        </p>
+                        <img src="./img/Player/OLEKSANDR USYK (4).png" class="mx-auto w-72 md:w-full lg:w-full" alt="">
+                        <div class="py-3 flex items-center text-2xl font-semibold gap-4">
+                            <p class="text-sm md:text-2xl lg:text-2xl">TERENCE 'BUD' CRAWFORD
+                            </p>
+                            <img src="./img/Player/flag/USA.png" alt="">
+                        </div>
+                        <div class="flex flex-wrap justify-between gap-2 text-md md:text-2xl lg:text-2xl font-bold text-[#FF110F]">
+                            <h2>RECORD</h2>
+                            <h2>40 - 0 (31 KO) </h2>
+                        </div>
+                   </div>
+                </div>
+                <div class="border border-[#101010] rounded-xl p-3 items-center bg-gray-50">
+                    <h2 class="bg-[#101010] text-white text-md md:text-2xl lg:text-2xl font-semibold rounded-md text-center p-2">WELTERWEIGHT</h2>
+                   <div class="px-4">
+                        <p class="font-bold text-md md:text-xl lg:text-xl text-[#4F4F4F] py-3 text-center">LIMIT: 147 LBS / 66.7 KG
+                        </p>
+                        <img src="./img/Player/OLEKSANDR USYK (5).png" class="mx-auto w-72 md:w-full lg:w-full" alt="">
+                        <div class="py-3 flex items-center text-2xl font-semibold gap-4">
+                            <p class="text-sm md:text-2xl lg:text-2xl">JARON 'BOOTS' ENNIS
+                            </p>
+                            <img src="./img/Player/flag/USA.png" alt="">
+                        </div>
+                        <div class="flex flex-wrap justify-between gap-2 text-md md:text-2xl lg:text-2xl font-bold text-[#FF110F]">
+                            <h2>RECORD</h2>
+                            <h2>32 - 0 (29 KO) </h2>
+                        </div>
+                   </div>
+                </div>
+                <div class="border border-[#101010] rounded-xl p-3 items-center bg-gray-50">
+                    <h2 class="bg-[#101010] text-white text-md md:text-2xl lg:text-2xl font-semibold rounded-md text-center p-2">JUNIOR WELTERWEIGHT
+                    </h2>
+                   <div class="px-4">
+                        <p class="font-bold text-md md:text-xl lg:text-xl text-[#4F4F4F] py-3 text-center">LIMIT: 140 LBS / 63.5 KG
+                        </p>
+                        <img src="./img/Player/OLEKSANDR USYK (1).png" class="mx-auto w-72 md:w-full lg:w-full" alt="">
+                        <div class="py-3 flex items-center text-2xl font-semibold gap-4">
+                            <p class="text-sm md:text-2xl lg:text-2xl">TEOFIMO 'THE TAKEOVER' LOPEZ
+                            </p>
+                            <img src="./img/Player/flag/USA.png" alt="">
+                        </div>
+                        <div class="flex flex-wrap justify-between gap-2 text-md md:text-2xl lg:text-2xl font-bold text-[#FF110F]">
+                            <h2>RECORD</h2>
+                            <h2>21 - 1 (13 KO) </h2>
+                        </div>
+                   </div>
+                </div>
+            </div>
+        </div>
         
 
         <!-- FooterUp Section  -->
